--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Address Book</title>
 </head>
+<style>
+#pics {
+    width:80%;
+    float:left;
+    margin:0px;
+    vertical-align: top;
+    font-size: 0;
+}
+#data{
+    width:19%;
+    float: left;
+}
+</style>
 <body>
     <div id="pics"></div>
     <div id="data"></div>
