Still said "HackBook" in the footer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
     <div class = "Fixed" id="rightPanel">
     <div id="data"></div>
     </div>
-    <div id="footer"><img src="../favicon.ico" style="width:16px;height:16px;" /> HackBook - 2020 crazyhappyfuntime.com => Austin Coding Academy (data courtesy of randomuser.me)</div>
+    <div id="footer"><img src="../favicon.ico" style="width:16px;height:16px;" /> DateBook - 2020 crazyhappyfuntime.com => Austin Coding Academy (data courtesy of randomuser.me)</div>
      
 
 </body>
